--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
 <script src="./scripts/vector.js"></script>
 <script src="./scripts/objects.js"></script>
 <script src="./scripts/renderer.js"></script>
+<script src="./scripts/main.js"></script>
